# football-prediction-bot

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
docs/: ROADMAP.md  backtest-2026-04-30.md  phase1-backtest-report.md
scripts/: backfill_boxscore.py  backfill_goals.py  backtest.py  backtest_full.py  daily_pipeline.py  dashboard.py  enrich_predictions.py  init_db.py  install_schedule.cmd  place_paper_pick.py  probe_co_bookies.py  probe_wplay_champions.py  probe_wplay_live.py  probe_wplay_match.py  pull_history.py  pull_xg.py  register_user_bets.py  resolve_picks.py  run_bot.cmd  run_bot_keeper.cmd  run_daily.cmd  run_dashboard.cmd  run_resolve.cmd  run_weekly_retrain.cmd  smoke_nlu.py  telegram_bot.py  test_external_parse.py  train_models.py  weekly_retrain.py
src/: __init__.py
src/betting/: __init__.py  kelly.py  risk_manager.py  value_detector.py
src/config/: settings.py
src/data/: __init__.py  api_football.py  espn.py  football_data_uk.py  match_context.py  news.py  odds_api.py  persist.py  understat.py  wplay_scraper.py
src/llm/: __init__.py  feature_extractor.py  match_analyst.py  nlu.py  pick_reviewer.py
src/models/: __init__.py  base.py  bayesian.py  cards_corners.py  dixon_coles.py  elo.py  ensemble.py  features.py  inplay_v0.py  inplay_v1.py  player_scorers.py  stacking.py  xgboost_model.py
src/notifications/: __init__.py  telegram_bot.py
src/telegram_app/: __init__.py  handlers.py  staging.py
src/tracking/: __init__.py  auto_resolver.py  external_bets.py  pick_logger.py
tests/: test_auto_resolver.py  test_kelly.py  test_value_detector.py
