[project]
name = "football-prediction-bot"
version = "0.1.0"
description = "Value bet detector for football matches using ensemble of statistical models + LLM-generated qualitative features"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Santiago Trujillo", email = "santiagotrujillozuluaga@gmail.com" }
]

dependencies = [
    # Config & env
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Logging
    "loguru>=0.7.0",

    # HTTP / scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",  # for Wplay live odds (read-only)

    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Stats / models (Phase 1)
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",

    # ML (Phase 2)
    "xgboost>=2.0.0",
    "lightgbm>=4.2.0",
    # "pymc>=5.10.0",        # Bayesian — installs heavy, gate behind extras
    # "torch>=2.2.0",        # Neural net — gate behind extras

    # LLM features (Phase 2)
    "anthropic>=0.40.0",

    # Notifications
    "python-telegram-bot>=21.0",

    # Dashboard (Phase 3)
    # "streamlit>=1.31.0",
]

[project.optional-dependencies]
bayesian = ["pymc>=5.10.0", "arviz>=0.17.0"]
neural = ["torch>=2.2.0"]
dashboard = ["streamlit>=1.31.0", "plotly>=5.19.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
